argo/workflows/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
spec:
  basicAuth:
    secret: htaccess
    removeHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
spec:
  entryPoints:
  - https
  - http
  routes:
  - kind: Rule
    middlewares:
    - name: basicauth
    match: HostRegexp(`argo.{domain:.+}`)
    priority: 10
    services:
    - name: argo-server
      port: 2746
  #- kind: Rule
  #  #middlewares:
  #  #- name: basicauth
  #  match: HostRegexp(`argo.{domain:.+}`) && Headers(`Content-Type`, `application/grpc`)
  #  priority: 11
  #  services:
  #  - name: argo-server
  #    port: 2746
  #    scheme: h2c
  #tls:
  #  certResolver: default
  #  options: {}
  #  domains:
  #  - main: argo
  #    sans:
  #    - "argo.c0.k8s.6shore.net"
